Add PopoverComponent class with key listener

--- a/Source/UI/CMakeLists.txt
+++ b/Source/UI/CMakeLists.txt
@@ -22,6 +22,8 @@ add_sources(open-ephys
 	InfoLabel.h
 	PluginInstaller.cpp 
 	PluginInstaller.h
+	PopoverComponent.cpp
+	PopoverComponent.h
 	ProcessorList.cpp
 	ProcessorList.h
 	UIComponent.cpp
