Add TTL Line parameter
- Support for TTL or Sync line selection
- In sync line selection mode, link to the selected stream parameter to use for main sync stream selection.
- Rename SyncChannelSelector to SyncLineSelector and add it to PLUGIN_API
- Move Synchronizer to its own folder and add it to PLUGIN_API
- Update RecordNode to use the new TTL line parameter for sync selection

--- a/Source/Processors/CMakeLists.txt
+++ b/Source/Processors/CMakeLists.txt
@@ -26,6 +26,7 @@ add_subdirectory(Serial)
 add_subdirectory(Settings)
 add_subdirectory(SourceNode)
 add_subdirectory(Splitter)
+add_subdirectory(Synchronizer)
 add_subdirectory(Visualization)
 
 
