--- a/Source/UI/CMakeLists.txt
+++ b/Source/UI/CMakeLists.txt
@@ -22,8 +22,8 @@ add_sources(open-ephys
 	InfoLabel.h
 	PluginInstaller.cpp 
 	PluginInstaller.h
-	PopoverComponent.cpp
-	PopoverComponent.h
+	PopupComponent.cpp
+	PopupComponent.h
 	ProcessorList.cpp
 	ProcessorList.h
 	UIComponent.cpp
