Fix build errors on Linux
- Find and link FontConfig library
- Remove deprecated keyword from AudioDataConverters and MidiBuffer::Iterator casuing build errors on older GCC compilers
- Add "default" visibility attribute to FloatVectorOperationsBase struct

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -203,6 +203,7 @@ elseif(LINUX)
 	endif()
 	find_package(CURL REQUIRED)
 	find_package(PkgConfig REQUIRED)
+	find_package(Fontconfig REQUIRED)
 	pkg_check_modules(WEBKIT2GTK REQUIRED webkit2gtk-4.0)
 	# pkg_check_modules(GTK REQUIRED gtk+-3.0)
 
@@ -212,7 +213,7 @@ elseif(LINUX)
 		${CURL_INCLUDE_DIRS}
 		${WEBKIT2GTK_INCLUDE_DIRS}
 	)
-	target_link_libraries(open-ephys GL X11 Xext Xinerama asound dl freetype pthread rt ${CURL_LIBRARIES} ${WEBKIT2GTK_LIBRARIES})
+	target_link_libraries(open-ephys GL X11 Xext Xinerama asound dl freetype pthread rt ${Fontconfig_LIBRARIES} ${CURL_LIBRARIES} ${WEBKIT2GTK_LIBRARIES})
 	set_property(TARGET open-ephys APPEND_STRING PROPERTY LINK_FLAGS
 		"-fvisibility=hidden -fPIC -rdynamic -Wl,-rpath,'$ORIGIN/shared'")
 
@@ -225,7 +226,7 @@ elseif(LINUX)
                 ${CURL_INCLUDE_DIRS}
                 ${WEBKIT2GTK_INCLUDE_DIRS}
             )
-            target_link_libraries(gui_testable_source GL X11 Xext Xinerama asound dl freetype pthread rt ${CURL_LIBRARIES} ${WEBKIT2GTK_LIBRARIES})
+            target_link_libraries(gui_testable_source GL X11 Xext Xinerama asound dl freetype pthread rt ${Fontconfig_LIBRARIES} ${CURL_LIBRARIES} ${WEBKIT2GTK_LIBRARIES})
             set_property(TARGET gui_testable_source APPEND_STRING PROPERTY LINK_FLAGS
                 "-fvisibility=hidden -fPIC -rdynamic -Wl,-rpath,'$ORIGIN/shared'")
 
