--- a/.github/workflows/osx.yml
+++ b/.github/workflows/osx.yml
@@ -22,6 +22,9 @@ jobs:
     
     steps:
     - uses: actions/checkout@v1
+    - uses: maxim-lobanov/setup-xcode@v1
+      with:
+        xcode-version: latest-stable
     - name: configure
       run: |
         cd Build 
